# migrant

./: .gitignore  .travis.yml  Color.hs  Data.hs  Main.hs  PlanMigration.hs  PostgresApi.hs  README.md  Shortcuts.hs  UI.hs  migrant.cabal  migrant.sublime-project  migrate.sublime-project  postgres-migrate.cabal
examples/: Exceptions.hs  Main.hs
migrant/: migrant.cabal
migrant-base/: migrant-base.cabal
migrant-base/examples/: Exceptions.hs
migrant-base/src/Database/Migrant/: PlanMigration.hs  Runner.hs
migrant-base/src/Database/Migrant/Backend/: Mock.hs  MockTwo.hs
migrant-base/src/Database/Migrant/Frontend/: Mock.hs  Terminal.hs
migrant-base/src/Database/Migrant/Test/: Main.hs  PlanMigration.hs  Runner.hs  Types.hs
migrant-base/src/Database/Migrant/Test/Backend/: Mock.hs  MockTwo.hs
migrant-base/src/Database/Migrant/Types/: Backend.hs  Message.hs  Migration.hs  Mock.hs
migrant-postgresql/: migrant-postgresql.cabal
migrant-postgresql/src/Database/Migrant/Backend/: PostgreSQL.hs
migrant-sqlite/: migrant-sqlite.cabal
migrant-sqlite/src/Database/Migrant/Backend/: SQLite.hs
migrant-sqlite/src/Database/Migrant/Test/: Main.hs
migrant-sqlite/src/Database/Migrant/Test/Backend/: SQLite.hs
migrant/src/Database/Migrant/: Runner.hs
migrant/src/Database/Migrant/Backend/: Mock.hs  MockTwo.hs
migrant/src/Database/Migrant/Test/: Main.hs
migrant/src/Database/Migrant/Types/: Backend.hs  MigrateSettings.hs
src/Database/: Migrant.hs
src/Database/Migrant/: Data.hs  PlanMigration.hs  Runner.hs  Terminal.hs  Test.hs
src/Database/Migrant/Backend/: Mock.hs  PostgreSQL.hs  SQLite.hs
src/Database/Migrant/Frontend/: Terminal.hs
src/Database/Migrant/Shortcuts/: PostgreSQL.hs
src/Database/Migrant/Test/: CabalTest.hs  Main.hs
src/Database/Migrant/Test/Backend/: Mock.hs  PostgreSQL.hs
src/Database/Migrant/Types/: Backend.hs  Message.hs  Migration.hs
src/Database/PostgreSQL/: Migrate.hs
src/Database/PostgreSQL/Migrate/: Data.hs  PlanMigration.hs  Runner.hs  Terminal.hs  Test.hs
src/Database/PostgreSQL/Migrate/Api/: PostgreSQL.hs
src/Database/PostgreSQL/Migrate/Backend/: Mock.hs  PostgreSQL.hs
src/Database/PostgreSQL/Migrate/Shortcuts/: PostgreSQL.hs
www/: Css.hs  index.css  index.htm
www/images/: birds.xcf  border.xcf  border_small.xcf  decor.xcf  leaf.xcf  leaf2.xcf  paper.xcf  shade.xcf  shade2.xcf  travel.xcf  travel_without_sky.xcf  travel_without_sky_small.xcf  twig.xcf  water_stain.xcf
