name: migrant
version: 0.0.1
synopsis: Database migration
description: Database migration
license: LGPL-3
license-file: LICENSE.txt
author: James Harrison Fisher <jameshfisher@gmail.com>
maintainer: James Harrison Fisher <jameshfisher@gmail.com>
copyright: (c) 2013 James Harrison Fisher <jameshfisher@gmail.com>
category: Database
build-type: Simple
cabal-version: >= 1.6

source-repository head
  type: git
  location: https://bitbucket.org/eegg/migrant

library
  hs-source-dirs: src
  build-depends:
    base,
    postgresql-simple,
    ansi-terminal,
    mtl
  exposed-modules:
    Database.Migrant,
    Database.Migrant.Backend.PostgreSQL,
    Database.Migrant.Shortcuts.PostgreSQL
  other-modules:
    Database.Migrant.Terminal
    Database.Migrant.Data
    Database.Migrant.PlanMigration
    Database.Migrant.Runner
    Database.Migrant.Backend.Mock
  ghc-options: -Wall -fno-warn-name-shadowing
  extensions:
    QuasiQuotes,
    OverloadedStrings,
    MultiParamTypeClasses,
    FunctionalDependencies,
    FlexibleInstances,
    RecordWildCards

test-suite test-postgres-migrate
  type: detailed-0.9
  test-module: Database.Migrant.Test
  hs-source-dirs: src
  build-depends:
    base,
    Cabal >= 1.14.0
  extensions:
    FlexibleInstances
