name: migrant-postgresql
version: 0.0.1
synopsis: Database migration
description: Database migration
license: LGPL-3
license-file: LICENSE.txt
author: James Harrison Fisher <jameshfisher@gmail.com>
maintainer: James Harrison Fisher <jameshfisher@gmail.com>
copyright: (c) 2013 James Harrison Fisher <jameshfisher@gmail.com>
category: Database
build-type: Simple
cabal-version: >= 1.6

source-repository head
  type: git
  location: https://bitbucket.org/eegg/migrant

library
  hs-source-dirs: src
  build-depends:
    base,
    postgresql-simple,
    bytestring,
    Cabal,
    HUnit,
    test-framework,
    test-framework-hunit,
    migrant-base
  exposed-modules:
    Database.Migrant.Backend.PostgreSQL
  other-modules:
  ghc-options: -Wall -fno-warn-name-shadowing
  extensions:
    QuasiQuotes,
    OverloadedStrings,
    FlexibleInstances,
    RecordWildCards,
    TypeFamilies,
    FlexibleContexts

test-suite test-migrant-postgresql
  type: exitcode-stdio-1.0
  main-is: Database/Migrant/Test/Main.hs
  other-modules:
    Database.Migrant.Backend.PostgreSQL
  hs-source-dirs: src
  build-depends:
    base,
    Cabal,
    HUnit,
    test-framework,
    test-framework-hunit,
    migrant-base
  ghc-options: -Wall -fno-warn-name-shadowing -O0
  extensions:
    QuasiQuotes,
    OverloadedStrings,
    FlexibleInstances,
    RecordWildCards,
    TypeFamilies,
    FlexibleContexts
