name: migrant-sqlite
version: 0.0.1
synopsis: Database migration
description: Database migration
license: LGPL-3
license-file: LICENSE.txt
author: James Harrison Fisher <jameshfisher@gmail.com>
maintainer: James Harrison Fisher <jameshfisher@gmail.com>
copyright: (c) 2013 James Harrison Fisher <jameshfisher@gmail.com>
category: Database
build-type: Simple
cabal-version: >= 1.6

source-repository head
  type: git
  location: https://bitbucket.org/eegg/migrant

library
  hs-source-dirs: src
  build-depends:
    base,
    sqlite,
    template-haskell,
    Cabal,
    HUnit,
    test-framework,
    test-framework-hunit,
    migrant
  exposed-modules:
    Database.Migrant.Backend.SQLite
  other-modules:
  ghc-options: -Wall -fno-warn-name-shadowing
  extensions:
    QuasiQuotes,
    OverloadedStrings,
    MultiParamTypeClasses,
    FlexibleInstances

test-suite test-migrant-sqlite
  type: exitcode-stdio-1.0
  main-is: Database/Migrant/Test/Main.hs
  other-modules:
    Database.Migrant.Backend.SQLite
    Database.Migrant.Test.Backend.SQLite
  hs-source-dirs: src
  build-depends:
    base,
    Cabal,
    HUnit,
    test-framework,
    test-framework-hunit,
    migrant
  ghc-options: -Wall -fno-warn-name-shadowing -O0
  extensions:
    QuasiQuotes,
    OverloadedStrings,
    MultiParamTypeClasses,
    FlexibleInstances
